common/common.scss
/* ... */
.featured-topic-wrapper {
    margin-top: 1em;
    text-align: left;
    position: relative;
    min-height: 350px;

    .spinner {
        position: absolute;
        left: 0;
        right: 0;
        top: 125px;
        margin-left: auto;
        margin-right: auto;
    }

    h2 {
        border-bottom: 1px solid $primary-low;
        padding-bottom: 0.5em;
        margin-bottom: 1em;
        @media (min-width: 610px){
            border-bottom: 0;
            margin-bottom: 0;
        }
    }

    .featured-topics {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 140px 140px 140px;
        grid-row-gap: 25px;
        grid-column-gap: 30px;

        @media screen and (max-width: 600px) {
            grid-template-columns: 1fr;
            grid-template-rows: auto;
            grid-row-gap: 10px;
        }

        .featured-topic {
            display: flex;
            flex-wrap: wrap;
            background: rgba(255, 255, 255, 0.893229);
            box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
            -webkit-box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
            -moz-box-shadow: 0px 10px 40px rgba(39, 52, 125, 0.12);
            border-radius: 8px;
            -webkit-border-radius: 8px;
            position: relative;
            overflow: hidden;


            @media screen and (min-width: 650px) {
                &:first-of-type:not(:last-of-type) {
                    border-radius: 12px;
                    min-height: 472px;
                    line-height: 24px;
                    grid-row: 1 /span 3;
                    border-radius: 0 0 12px 12px;

                    .featured-topic-image {
                        -webkit-box-flex: 0;
                        -ms-flex: 0 0 100%;
                        flex: 0 0 100%;
                        max-width: 100%;
                        width: 100%;
                        height: 335px;
                        border-radius: 0;
                    }

                    .featured-topic-meta {
                        padding: 10px 20px 0px 30px;
                        color: #0C0033;

                        h3.featured-topic-title {
                            font-size: $font-up-2;
                            font-weight: 500;
                        }
                    }
                }

                &:last-of-type:not(:first-of-type) {}
            }

            @media screen and (max-width: 600px) {
                width: 100%;
                border-radius: 0;

                .featured-topic-image {
                    border-radius: 0;
                }
            }

            @media screen and (max-width: 450px) {
                width: 100%;
            }

            .featured-topic-meta {
                flex-basis: 0;
                -webkit-box-flex: 1;
                -ms-flex-positive: 1;
                flex-grow: 1;
                max-width: 100%;
                padding: 10px 56px 0 30px;
                font-weight: normal;
                font-size: 14px;
                line-height: 16px;
                color: #252525;


                h3.featured-topic-title {
                    font-size: $font-up-1;
                    line-height: 22px;
                    word-break: break-word;
                    padding-bottom: 10px;
                    margin-bottom: 0;

                    a {
                        color: #0c0033;
                        display: -webkit-box;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        word-wrap: break-word;
                        -webkit-line-clamp: 2;
                        -webkit-box-orient: vertical;
                    }

                    @media screen and (max-width: 450px) {}
                }

                @media screen and (max-width: 600px) {
                    padding: 10px 15px 0 15px;
                }

            }

            .featured-topic-image {
                position: relative;
                overflow: hidden;
                font-size: 0%;
                line-height: 0%;
                flex-basis: 0;
                -webkit-box-flex: 1;
                -ms-flex-positive: 1;
                flex-grow: 1;
                max-width: 100%;
                border-radius: 12px 0 0px 12px;
                -webkit-border-radius: 12px 0 0px 12px;
                -moz-border-radius: 12px 0 0px 12px;
                width: 100%;
                height: 140px;

                a {
                    display: block;
                    width: 100%;
                    height: 100%;
                }

                @media screen and (max-width: 600px) {
                    -webkit-box-flex: 0;
                    -ms-flex: 0 0 33.333333%;
                    flex: 0 0 33.333333%;
                    max-width: 33.333333%;
                    height: 120px;
                    border-radius: 0;
                }
                img.featured-topic-thumbnail{
                    height: 100%;
                    left: 0;
                    -o-object-fit: cover;
                    object-fit: cover;
                    position: absolute;
                    top: 0;
                    width: 100%;
                }
            }
        }
    }
}
.latest-topic-wrapper {
    margin-top: 2.6666667vw;
    max-width: 1110px;
    @media (max-width: 610) {
        margin-top: 2.6666667vw;
    }   
}

img.dt-lazy-loaded {
    opacity: 1;
    transition: opacity .7s cubic-bezier(.465, .183, .153, .946);
}

.b-grid {

    a {
        color: inherit;
        text-decoration: none;
    }

    >* {
        max-width: 100vw;
    }
}

.b-brief {
    background: currentColor;
    color: #fff;
    display: flex;
    position: relative;
}

.b-meta {
    display: flex;
    flex-direction: column;
    flex: 1;
    font-size: 3.6vw;
    padding: 2.9333333vw 4vw 1.6vw;

    a {
        text-decoration: none;
    }
}
/* ... */

